# sdsl-lite

./: .gitmodules  CMakeLists.txt  README.md
benchmark/csa_operations/: .gitignore  CMakeLists.txt
benchmark/csa_operations/config/files/: english200MB.json  enwiki-int.json
benchmark/csa_operations/config/indexes/: csa_sada.json  csa_sada_pfor.json  csa_sada_uef.json
benchmark/csa_operations/src/: build.cpp  measure.cpp
benchmark/csa_operations/tools/: visualize_results.go
benchmark/index_operations/: .gitignore  CMakeLists.txt  Makefile
benchmark/index_operations/CMakeModules/: FindR.cmake
benchmark/index_operations/config/files/: enwiki-int.json  sources200MB.json
benchmark/index_operations/config/indexes/: csa_sada-16.config  csa_sada-32.config  csa_sada-8.config  csa_sada_16_noop.config  csa_sada_32_noop.config  csa_sada_8_noop.config  csa_sada_pfor-16.config  csa_sada_pfor-32.config  csa_sada_pfor-8.config  csa_sada_pfor.json
benchmark/index_operations/src/: measure.cpp
benchmark/index_operations/tools/: build_indexes.go  download_files.go  generate_build_targets.go  glob_test_files.go  run_benchmark.go  visualize_results.R
benchmark/indexing_count/: Makefile  compile_options.config  index.config  test_case.config
benchmark/indexing_count/visualize/: index-filter.config
include/sdsl/: bit_coders.hpp  bit_magic.hpp  bit_streams.hpp  bits.hpp  bitvector_list.hpp  bp_support_algorithm.hpp  bp_vector.hpp  csa_sada.hpp  csa_wt.hpp  ef_vector.hpp  eliasfano_list.hpp  hyb_vector.hpp  int_vector.hpp  int_vector_mapped_buffer.hpp  int_vector_mapper.hpp  list_basics.hpp  memory_management.hpp  optpfor_vector.hpp  rank_support.hpp  rrr_helper.hpp  rrr_vector.hpp  select_support_mcl.hpp  structure_tree.hpp  suffix_array_algorithm.hpp  suffix_array_helper.hpp  uint128_t.hpp  util.hpp  vectors.hpp  wt_algorithm.hpp  wt_helper.hpp  wt_huff.hpp  wt_hutu.hpp  wt_pc.hpp
lib/: CMakeLists.txt  construct_lcp.cpp  memory_management.cpp  ram_filebuf.cpp  uint128_t.cpp  util.cpp
test/: CsaByteTest.cpp  Makefile
